--- a/readme.me
+++ b/readme.me
@@ -1,4 +1,4 @@
-1- **EĞİTİM ÖNCESİ İÇERİKLER**
+ **EĞİTİM ÖNCESİ İÇERİKLER**
 
 
 # 1. HAFTA 
@@ -71,64 +71,8 @@
 
 
 
-**EĞİTİM SONRASI İÇERİKLER**
-
-# 1. HAFTA
 
 
-
-# 2. HAFTA
-
-
-
-# 3. HAFTA
-
-
-
-# 4. HAFTA
-
-
-
-
-# 5. HAFTA
-
-
-
-
-# 6. HAFTA
-
-
-
-
-# 7. HAFTA
-
-
-
-
-
-# 8. HAFTA
-
-
-
-
-# 9. HAFTA
-
-
-
-
-# 10. HAFTA
-
-
-
-
-
-# 11. HAFTA
-
-
-
-
-
-# 12.HAFTA 
 
 
 
